<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TbsSms</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="guider_open_button">进入软件</string>
    <string name="contact_search_tip">搜索</string>
    <string name="choice_all">全选</string>
    <string name="choice_cancle">取消全选</string>
    <string name="contact_search_hint">请输入搜索关键字</string>
    <string name="contact_search_title">搜号码</string>
    <string name="listview_contact_null">暂且无查询内容</string>
    <string name="clean_sms">清空信息记录</string>
    <string name="clean_sms_title">是否清空当前信息记录?</string>
    <string name="sms_server_begin">OA短信服务已启动！</string>
    <string name="sms_server_close">OA短信服务已停止！</string>
    <string name="main_title">信息</string>
    <string name="main_contact">通讯录</string>
    <string name="main_delete_all">清空聊天消息</string>
    <string name="main_setting">设置</string>
    <string name="main_exit">退出</string>
    <string name="main_exit_title">退出微信</string>
    <string name="main_exit_warning">退出后，你将收不到新的消息。确定要退出？</string>
    <string name="main_sending">正在发送中</string>
    <string name="main_recving">正在接收中</string>
    <string name="chatting_send">发送</string>
    <string name="slide_del_view_del">删 除</string>
    <string name="settings_title">设置</string>
    <string name="settings_faq">帮助与反馈</string>
    <string name="settings_feedbackui_title">意见反馈</string>
    <string name="settings_feedbackui_succ">已收录，感谢你的反馈。</string>
    <string name="settings_feedbackui_err">反馈提交失败。</string>
    <string name="settings_skin">界面主题</string>
    <string name="settings_chatting_bg">聊天背景</string>
    <string name="main_more">设置</string>
    <string name="app_new">new</string>
    <string name="weixin_content">当前内容是微信内容,无进行直接回复,请使用微信客户端！</string>
    <string name="more_setting">短信设置</string>
    <string name="more_button">服务开关设置</string>
    <string name="about_setting">关于</string>
    <string name="email_setting">推送设置</string>
    <string name="login_msg">OA短信服务</string>
    <string name="mis_chat_setting_btn">APP短信服务</string>
    <string name="system_notifi">系统通知</string>
    <string name="email_msg">邮箱设置</string>
    <string name="login_hint">例:gengtao</string>
    <string name="loginpsw_hint">例:1234</string>
    <string name="psw_hint">例:9999</string>
    <string name="smtp_hint">例:123456</string>
    <string name="pop_hint">pop地址</string>
    <string name="url_hint">例:168.160.111.1</string>
    <string name="notifi_setting">推送设置</string>
    <string name="notifi_open_close">通知开关</string>
    <string name="update_address_error">名片修改失败</string>
    <string name="update_address_success">名片修改成功</string>
    <string name="update_app">检查更新版本</string>
    <string name="save_btn">保存</string>
    <string name="back_btn">返回</string>
    <string name="notifi_title">TbsSms短信收发中转软件</string>
    <string name="ini_hint"></string>
    <string name="sms_net_setting">手机短信服务</string>
    <string name="server_button_title">服务开关</string>
    <string name="mis_server_begin">APP短信服务已启动！</string>
    <string name="mis_server_close">APP短信服务已停止！</string>
    <string name="dbk_server_begin">手机短信服务已启动！</string>
    <string name="dbk_server_close">手机短信服务已停止！</string>
    <string name="auto_start_server">允许开机启动</string>
    <string name="auto_start_forward">验证码功能开关</string>
    <string name="tools_start_forward">验证码生成工具</string>
    <string name="telephone_num_setting">手机号码设置</string>
    <string name="sms_forward_setting">短信验证码设置</string>
    <string name="detail_num_setting">查询短信服务手机号</string>

</resources>